apps/nextjs/components/Footer/Footer.module.scss
@import "../../styles/colors.scss";
@import "../../styles/nav-lists.scss";
@import "../../styles/responsive.scss";

.footer {
  background-color: $nav-background;
  color: $light-text;

  @include nav-lists;

  .content {
    flex-direction: column;
    max-width: 100%;
    gap: 8px;

    ul {
      justify-content: center;

      @include breakpoint($sm-zero-only) {
        flex-direction: column;
        align-items: center;
        gap: 8px;
      }
    }

    .miscLinks {
      display: flex;
      justify-content: center;
      gap: 16px;
      
      a {
        font-weight: 500;
      }

      .email
      {
        text-decoration: underline !important;
      }
    }
  }
}

.acknowledgement {
  background-color: $primary;
  color: $light-text;
}

